dist_man1_MANS=

if BUILD_WAZZLED
  dist_man1_MANS+=wazzled.1
endif

if ENABLE_QT
  dist_man1_MANS+=wazzle-qt.1
endif

if BUILD_WAZZLE_CLI
  dist_man1_MANS+=wazzle-cli.1
endif

if BUILD_WAZZLE_TX
  dist_man1_MANS+=wazzle-tx.1
endif

if ENABLE_WALLET
if BUILD_WAZZLE_WALLET
  dist_man1_MANS+=wazzle-wallet.1
endif
endif
